# gcs_anndata

./: README.md  pyproject.toml  setup.cfg  setup.py
gcs_anndata/: __init__.py  core.py  exceptions.py  io.py  utils.py
scripts/: create_test_files.py
tests/: conftest.py  test_core.py
