[metadata]
name = gcs_anndata
version = 0.1.0
description = Partial reading of h5ad files from Google Cloud Storage
long_description = file: README.md
long_description_content_type = text/markdown
author = Masahiro Kanai
author_email = mkanai@broadinstitute.org
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    gcsfs>=2021.4.0
    h5py>=3.1.0
    numpy>=1.19.0
    pytest>=6.0
    scipy>=1.5.0

[options.packages.find]
exclude =
    tests*
